--- a/src/com/internshala/connectfour/game.fxml
+++ b/src/com/internshala/connectfour/game.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -23,11 +26,29 @@
       <Pane fx:id="insertedDiscsPane" prefHeight="400.0" prefWidth="200.0" GridPane.rowIndex="1" />
       <VBox style="-fx-background-color: #2B3B4C;" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
          <children>
-            <Region prefHeight="156.0" prefWidth="214.0" VBox.vgrow="ALWAYS" />
+            <TextField fx:id="playerOneTextField" prefHeight="32.0" prefWidth="225.0" promptText="Player One Name">
+               <VBox.margin>
+                  <Insets left="15.0" right="15.0" top="35.0" />
+               </VBox.margin></TextField>
+            <TextField fx:id="playerTwoTextField" prefHeight="32.0" prefWidth="225.0" promptText="Player Two Name">
+               <VBox.margin>
+                  <Insets left="15.0" right="15.0" />
+               </VBox.margin></TextField>
+            <Button fx:id="setNamesButton" mnemonicParsing="false" prefHeight="32.0" prefWidth="225.0" text="Set Names">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
+               </VBox.margin>
+            </Button>
             <Label fx:id="playerNameLabel" alignment="CENTER" prefHeight="43.0" prefWidth="305.0" text="Player One" textFill="#fcfcfc">
                <font>
                   <Font name="System Bold" size="29.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="70.0" />
+               </VBox.margin>
             </Label>
             <Label alignment="CENTER" prefHeight="38.0" prefWidth="305.0" text="Turn" textFill="WHITE">
                <font>
